full screen image fixed on mobile devices

--- a/Portfolio/css/index.css
+++ b/Portfolio/css/index.css
@@ -4,9 +4,8 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-}
-body, #content {
-    width: 100%;
     height: 100%;
+    overflow: hidden;
 }
+
 
